--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@types/uuid": "^10.0.0",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.12",
@@ -26,6 +27,7 @@
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
     "expo-media-library": "~18.2.1",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~6.0.21",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
