--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
     "expo": "~54.0.30",
+    "expo-audio": "~1.1.1",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.12",
     "expo-file-system": "~19.0.21",
